--- a/app/src/main/res/layout/layout_on_boarding.xml
+++ b/app/src/main/res/layout/layout_on_boarding.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/design_default_color_primary_dark">
-
-
+    android:background="@drawable/strip">
+<!--    android:background="@color/design_default_color_primary_variant"-->
 
     <Button
         android:id="@+id/btnActors"
@@ -15,7 +14,7 @@
         android:layout_marginTop="200dp"
         android:text="ACTORS"
         android:textColor="@android:color/white"
-        android:background="@drawable/button_background"
+        android:background="@color/black"
         android:elevation="4dp"
         app:layout_constraintBottom_toTopOf="@+id/btnGenres"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +30,7 @@
         android:layout_marginBottom="32dp"
         android:text="GENRES"
         android:textColor="@android:color/white"
-        android:background="@drawable/button_background"
+        android:background="@drawable/fancy_button_background"
         android:elevation="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,7 +43,7 @@
         android:layout_marginBottom="132dp"
         android:text="NEXT PAGE"
         android:textColor="@android:color/white"
-        android:background="@drawable/button_background"
+        android:background="@drawable/background"
         android:elevation="4dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
